# seegull

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  api.py  download_model.py  pyproject.toml  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-app.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
notebooks/: DINO.ipynb  YOLO.ipynb
src/seegull/: __init__.py
src/seegull/data/: bounding_box.py  image.py
src/seegull/models/: dino.py  yolo.py
src/seegull/util/: util.py
tests/: __init__.py  conftest.py  test_bounding_box.py  test_dino.py  test_image.py  test_seegull.py  test_yolo.py
tests/data/: images.csv
